2005-08-06  Hans de Graaff  <hans@degraaff.org>

	* checkbot (performRequest): Switch from HEAD to GET on a 400
	error, as the most likely cause is that the server has trouble
	with HEAD requests.

2005-08-05  Hans de Graaff  <hans@degraaff.org>

	* checkbot (handle_doc): Also show how many new links are found on
	a page, not just the total number of links.
	(performRequest): Don't retry GET method on a 403 error.
	(handle_doc): Properly handle newlines in the matches for title
	and robots meta tag.

2005-07-28  Hans de Graaff  <hans@degraaff.org>

	* Checkbot 1.77 is released.

	* checkbot: Fix use of $VERSION so that it compiles and can be
	used by MakeMaker at the same time.
	(handle_doc): Check for presence of robots meta tag and act on it.
	Based on a patch by Donald Willingham.

2005-07-25  Hans de Graaff  <hans@degraaff.org>

	* Checkbot 1.76 is released.

2005-06-07  Hans de Graaff  <hans@degraaff.org>

	* checkbot (printServerProblems): Include title of page.
	(handle_doc): Extract title for later printing.
	Add new hash url_title to store page titles.
	Based on a patch from John Bintz.

2005-04-23  Hans de Graaff  <hans@degraaff.org>

	* checkbot: Add documentation on use of file:/// URLs.

2005-01-23  Hans de Graaff  <hans@degraaff.org>

	* checkbot: Only send mail when Checkbot has detected any
	problems, based on suggestion from Thomas Kuerten.

	Print duration of run on final report, and refactor use of start
	time variable to facilitate this. Feature depends on availability
	of Time::Duration, but checkbot will work without it. Based on
	patch from Adam Griff.

2005-01-23  Adam Griff <griff@computer.org>
	
	* checkbot (create_page): Print out more options on results page.
	
2005-01-21  Hans de Graaff  <hans@degraaff.org>

	* checkbot: Remove automatic version number based on CVS version
	now that commits will be more frequent than releases.

2004-11-12  Hans de Graaff  <hans@degraaff.org>

	* checkbot (handle_url): Ignore javascript: URLs instead of