@@ -83,6 +83,9 @@ a field name</a> error from within HTTP::Headers.
 
 <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-XXXXXXXXXX" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0">
 
+<applet code="org.degraaff.Applet" archive="applet.jar">
+
+
 A link with some <a href="javascript:parent.Jump(1)">javascript
 code</a> and one with <a href="JavaScript:parent.Jump(2)">mixed case
 scheme</a>.
@@ -91,6 +94,6 @@ scheme</a>.
 <hr>
 <address><a href="http://www.xs4all.nl/~graaff/">J.J. de Graaff</a></address>
 <!-- hhmts start -->
-Last modified: Fri Aug  5 11:14:36 CEST 2005
+Last modified: Sat Aug 20 08:02:33 CEST 2005
 <!-- hhmts end -->
 </body> </html>
