@@ -1,3 +1,11 @@
+2005-08-20  Hans de Graaff  <hans@degraaff.org>
+
+	* checkbot (handle_doc): Ignore some 'links' found by LinkExtor
+	which do not need to link to live links. Fixed bugs #1264447 and
+	#1107832. 
+
+	* test.html: Add test cases for it.
+
 2005-08-06  Hans de Graaff  <hans@degraaff.org>
 
 	* checkbot (performRequest): Switch from HEAD to GET on a 400
